--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,8 @@ theme: jekyll-theme-minimal
 github:
   is_project_page: false
   
+title: Platinum(II) Chloride
+Description: Find A LOT of cute PtCl2 pictures here!
+
+logo: logo.png
+google_analytics: UA-150290310-1
