added more lovely pictures of PtCl2

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: jekyll-theme-minimal
 github:
   is_project_page: false
   
-title: Platinum(II) Chloride
+title: PtCl₂
 Description: Find A LOT of cute PtCl2 pictures here!
 
 logo: logo.png
